<resources>
    <string name="app_name">MADProject</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="student_id">Student ID</string>
    <string name="student_name">Student Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="contact_no">Contact No.</string>
    <string name="address">Address</string>
    <string name="school">School</string>
    <string name="guardians_name">Guardians Name</string>
    <string name="guardians_contact_no">Guardians Contact No.</string>
    <string name="admin_panel_topic">admin panel (topic)</string>
    <string name="student_panel_topic">student panel (topic)</string>
</resources>
